[gd_scene load_steps=17 format=2]

[ext_resource path="res://src/ui/hud/SmceHud.gd" type="Script" id=1]
[ext_resource path="res://src/ui/notification_display/NotificationDisplay.gd" type="Script" id=3]
[ext_resource path="res://media/fonts/Open_Sans/OpenSans-Regular.ttf" type="DynamicFontData" id=4]
[ext_resource path="res://src/ui/hud/SettingPane.tscn" type="PackedScene" id=5]

[sub_resource type="DynamicFont" id=1]
use_mipmaps = true
use_filter = true
extra_spacing_top = -2
font_data = ExtResource( 4 )

[sub_resource type="Theme" id=2]
default_font = SubResource( 1 )

[sub_resource type="StyleBoxFlat" id=3]
bg_color = Color( 0.0941176, 0.0941176, 0.0941176, 1 )
border_width_right = 1
border_color = Color( 0, 0, 0, 1 )

[sub_resource type="StyleBoxFlat" id=4]
bg_color = Color( 0.141176, 0.141176, 0.141176, 1 )
shadow_color = Color( 0, 0, 0, 0.0509804 )
shadow_size = 20

[sub_resource type="StyleBoxFlat" id=5]
bg_color = Color( 0.0941176, 0.0941176, 0.0941176, 1 )
border_width_bottom = 1
border_color = Color( 0.305882, 0.305882, 0.305882, 1 )

[sub_resource type="StyleBoxFlat" id=6]
bg_color = Color( 0, 0, 0, 0 )
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
border_color = Color( 0, 0.478431, 0.8, 1 )

[sub_resource type="StyleBoxFlat" id=7]
bg_color = Color( 0, 0.478431, 0.8, 1 )
expand_margin_left = 2.0

[sub_resource type="StyleBoxFlat" id=8]
bg_color = Color( 0, 0.478431, 0.8, 1 )

[sub_resource type="StyleBoxFlat" id=9]
bg_color = Color( 0, 0.478431, 0.8, 1 )

[sub_resource type="StyleBoxFlat" id=10]
content_margin_left = 0.0
bg_color = Color( 0.6, 0.6, 0.6, 0 )

[sub_resource type="StyleBoxEmpty" id=11]

[sub_resource type="Theme" id=12]
VScrollBar/icons/decrement = null
VScrollBar/icons/decrement_highlight = null
VScrollBar/icons/increment = null
VScrollBar/icons/increment_highlight = null
VScrollBar/styles/grabber = SubResource( 7 )
VScrollBar/styles/grabber_highlight = SubResource( 8 )
VScrollBar/styles/grabber_pressed = SubResource( 9 )
VScrollBar/styles/scroll = SubResource( 10 )
VScrollBar/styles/scroll_focus = SubResource( 11 )

[node name="SmceHud" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
theme = SubResource( 2 )
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LeftPane" type="PanelContainer" parent="."]
anchor_bottom = 1.0
margin_left = -256.0
margin_right = 48.0
rect_min_size = Vector2( 304, 0 )
custom_styles/panel = SubResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Panel" type="PanelContainer" parent="."]
anchor_bottom = 1.0
margin_right = 48.0
custom_styles/panel = SubResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="Panel"]
margin_right = 48.0
margin_bottom = 720.0

[node name="MarginContainer" type="PanelContainer" parent="Panel/VBoxContainer"]
margin_right = 48.0
margin_bottom = 42.0
custom_styles/panel = SubResource( 5 )

[node name="VBoxContainer" type="VBoxContainer" parent="Panel/VBoxContainer/MarginContainer"]
margin_right = 48.0
margin_bottom = 41.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ProfileControlToggle" type="ToolButton" parent="Panel/VBoxContainer/MarginContainer/VBoxContainer"]
margin_right = 48.0
margin_bottom = 41.0
rect_min_size = Vector2( 0, 41 )
mouse_default_cursor_shape = 2
size_flags_vertical = 3
custom_styles/focus = SubResource( 6 )
text = "="
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ScrollContainer" type="ScrollContainer" parent="Panel/VBoxContainer"]
margin_top = 46.0
margin_right = 48.0
margin_bottom = 720.0
size_flags_vertical = 3
theme = SubResource( 12 )
follow_focus = true
scroll_horizontal_enabled = false

[node name="VBoxContainer" type="VBoxContainer" parent="Panel/VBoxContainer/ScrollContainer"]
margin_right = 48.0
margin_bottom = 674.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Control" type="Control" parent="Panel/VBoxContainer/ScrollContainer/VBoxContainer"]
margin_right = 48.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ToolButton" type="ToolButton" parent="Panel/VBoxContainer/ScrollContainer/VBoxContainer"]
margin_top = 4.0
margin_right = 48.0
margin_bottom = 44.0
rect_min_size = Vector2( 0, 40 )
mouse_default_cursor_shape = 2
custom_styles/focus = SubResource( 6 )
text = "+"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HelpToolButton" type="ToolButton" parent="Panel/VBoxContainer/ScrollContainer/VBoxContainer"]
margin_top = 48.0
margin_right = 48.0
margin_bottom = 77.0
mouse_default_cursor_shape = 2
text = "Help"

[node name="ProfileScreentoggle" type="ToolButton" parent="."]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ProfileControl" parent="." instance=ExtResource( 5 )]
margin_left = -320.0
margin_right = -16.0

[node name="Notifications" type="VBoxContainer" parent="."]
anchor_left = 1.0
anchor_right = 1.0
anchor_bottom = 0.989
margin_left = -320.0
margin_top = 8.0
margin_right = -8.0
margin_bottom = -0.0800171
mouse_filter = 2
custom_constants/separation = 8
alignment = 2
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}
